[gd_scene load_steps=13 format=3 uid="uid://bmes7ut085qpf"]

[ext_resource type="Script" uid="uid://cnsvhtp1uo4c2" path="res://Scripts/badge_scene.gd" id="1_v6gy2"]
[ext_resource type="Texture2D" uid="uid://bc2aaria5qnph" path="res://assets/colour palet.png" id="2_ooj67"]
[ext_resource type="Texture2D" uid="uid://hc8uv6puwy4v" path="res://assets/background-char.png" id="2_s17b3"]
[ext_resource type="FontFile" uid="uid://chfs0odslc5jb" path="res://assets/STAMPWRITER-KIT.ttf" id="3_6j46q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gcvj"]
bg_color = Color(0.254902, 0.121569, 0.0588235, 0.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwhms"]
bg_color = Color(0.254902, 0.121569, 0.0588235, 0.4)

[sub_resource type="Animation" id="Animation_68aow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_8cfh7"]
resource_name = "fade_out_daniel"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.376471, 0.298039, 0.254902, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeOut/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2lmbb"]
_data = {
&"RESET": SubResource("Animation_68aow"),
&"fade_out_daniel": SubResource("Animation_8cfh7")
}

[sub_resource type="Animation" id="Animation_bts7m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_feo3d"]
resource_name = "text"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/Label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3tq1"]
_data = {
&"RESET": SubResource("Animation_bts7m"),
&"text": SubResource("Animation_feo3d")
}

[node name="badge scene" type="Node2D"]
script = ExtResource("1_v6gy2")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1280.0
texture = ExtResource("2_s17b3")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -34.0
offset_top = -94.0
offset_right = 1502.0
offset_bottom = 930.0
scale = Vector2(1.3, 1.3)

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -374.154
offset_top = 286.154
offset_right = 376.846
offset_bottom = 355.154
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_6j46q")
theme_override_font_sizes/font_size = 50
text = "**BADGE SHOULD BE HERE**"

[node name="TextEdit" type="TextEdit" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.038
offset_top = -130.462
offset_right = 232.962
offset_bottom = -30.4621
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_7gcvj")

[node name="confirmName" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.308
offset_top = 61.0769
offset_right = 70.6923
offset_bottom = 161.077
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_6j46q")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_bwhms")
text = "CONFIRM"

[node name="ColourPalet" type="Sprite2D" parent="."]
position = Vector2(-545, 402)
texture = ExtResource("2_ooj67")

[node name="FadeOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2lmbb")
}

[node name="ColorRect" type="ColorRect" parent="FadeOut"]
visible = false
modulate = Color(0.376471, 0.298039, 0.254902, 1)
self_modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l3tq1")
}

[node name="Label" type="Label" parent="AnimationPlayer"]
offset_left = 550.0
offset_top = 400.0
offset_right = 1243.0
offset_bottom = 498.0
theme_override_fonts/font = ExtResource("3_6j46q")
theme_override_font_sizes/font_size = 50
text = "random text fkdslfjsks"
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[connection signal="text_changed" from="TextureRect/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="TextureRect/confirmName" to="." method="_on_confirm_name_pressed"]
[connection signal="pressed" from="TextureRect/confirmName" to="TextureRect/confirmName" method="_on_pressed"]
